tests/snapshots/file@nil@literal.lox.snap
---
source: tests/common/mod.rs
description: "print nil; // expect: nil\n"
input_file: test_files/nil/literal.lox
---
OUT: 
nil

===
ERR:
